# pygeobase

./: .coveragerc  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CHANGES.rst  LICENSE.txt  README.rst  conda_requirements.yml  doc_requirements.txt  environment.yml  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/workflows/: ubuntu.yml  windows.yml
docs/: Makefile  conf.py  index.rst
docs/graphs/: graphs.org  overview_img.dot  overview_static.dot  overview_ts.dot
pygeobase/: _version.py  io_base.py  object_base.py  utils.py
src/pygeobase/: io_base.py  object_base.py  utils.py
tests/: conftest.py  test_io_base.py  test_object_base.py  test_placeholder.py  test_utils.py
