[metadata]
description = Add a small description here!
author = Sebastian Hahn
author_email = sebastian.hahn@geo.tuwien.ac.at
license = none
url = http://...
# Comma separated list of data inside your package to include
package_data = 
# Comma separated list of data outside your package to include
# Equivalent to adding files to MANIFEST.in
data_files = *.rst, *.txt
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = Development Status :: 4 - Beta,
              Programming Language :: Python

[console_scripts]
# Add here console scripts like:
# script = pygeobase.module:function
# for example:
# hello_world = pygeobase.skeleton:run

[test]
# html, xml or annotate
cov-report = html
junitxml = junit.xml


# Options for py.test
[pytest]
flakes-ignore =
    doc/conf.py ALL

pep8-ignore =
    doc/conf.py ALL
